BLL e implementación sobre Formulario, agrega comentarios de documentación

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -79,5 +79,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{FFCA74B2-D360-44E7-B6A9-038221230346}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{6727C5F6-5EA5-4E70-B5DD-8D5BFCB29686}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
